--- a/mobile_manipulation/package.xml
+++ b/mobile_manipulation/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>mobmanip</name>
+  <name>mobile_manipulation</name>
   <version>0.0.0</version>
-  <description>The mobmanip package</description>
+  <description>The mobile manipulation example package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
